<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="app_name">Bluetooth scale</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="title_activity_weight">Bluetooth scale</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="calibzero">calib zero</string>
    <string name="calibwgt">calib span</string>
    <string name="save">save</string>
    <string name="save_wet">save</string>
    <string name="ret">return</string>
    <string name="connprt">connect printer</string>
    <string name="connoldprt">match printer</string>
    <string name="cancle">cancle</string>
    <string name="fama">input calib value</string>
    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_characteristic">CharacteristicActivity</string>
    <string name="action_settings">Settings</string>

    <string name="device_settings">param</string>
    <string name="user_settings">user</string>
    <string name="data_settings">data</string>

    <string name="hello_world">Hello world!</string>
    <string name="select">选择设备</string>
    <string name="calibK">标定系数</string>
    <string name="search">search</string>
    <string name="stop">stop</string>

    <string name="inputbtmachint">输入mac</string>
    <string name="connectbtmacaddress">连接蓝牙地址</string>
    <string name="contentdescription">内容描述</string>
    <string name="printform">打印榜单</string>
    <string name="print">打印</string>
    <string name="conn_all">连接</string>
    <string name="preset_tare">预置皮重</string>
    <string name="zerotrack">零点跟踪范围</string>
    <string name="zeroinit">开机置零范围</string>
    <string name="handzero">手动置零范围</string>
    <string name="mtd">稳定范围</string>
    <string name="dignum">小数点数</string>
    <string name="div">分度值    </string>
    <string name="nov">满量程  </string>
    <string name="unit">Unit </string>
    <string name="filter">滤波等级 </string>
    <string name="write">Save</string>
    <string name="read">Read</string>
    <string name="zero">Zero</string>
    <string name="tare">Tare</string>
    <string name="discard_tare">Tare</string>
    <string name="net">Net</string>
    <string name="switch_ng">N/G</string>
    <string name="acc">ACC: </string>
    <string name="calibration_value">Calibration Value:</string>
    <string name="prompt_scan">You have not yet chosen the Bluetooth device, please search first</string>
    <string name="prompt_title">Prompt</string>
    <string name="ok">OK</string>
    <string name="prompt_conn_timeout">Connection timeout, clicking weight display can be reconnected</string>
    <string name="connect_ble">Bluetooth scale is connectings</string>
    <!--启动界面-->
    <string name="welcome">Welcome to Bluetooth Scale</string>
    <string name="start_copyright">©2015-2017</string>
    <string name="start_company">WeiZhi Software Technology(Chongqing)Co.Ltd.)</string>
    <string name="sample">sample</string>
    <string name="reset_count">U.W clear</string>
    <string name="one_weight">U.W</string>
    <string name="one_weight_save"> U.W save</string>
    <string name="quantity">quantity</string>
    <string name="input">Please input weight</string>
    <string name="saveok">Save ok</string>
    <string name="savefail">Save fail</string>
    <string name="zero_failed">Can not zero in net mode</string>
    <string name="menu_weight">weight</string>
    <string name="menu_count">count</string>

    <string name="menu_title_weight">weight</string>
    <string name="menu_his">history</string>
    <string name="menu_set">configure</string>
    <string name="menu_set_manager">device</string>
    <string name="menu_version">version</string>
    <string name="menu_more">more</string>
    <string name="menu_printer">printer</string>
    <!--历史记录查询-->
    <string name="history">history</string>
    <string name="gross">gross</string>
    <string name="his_filter">filter</string>
    <string name="his_next_page">next</string>
    <string name="his_previous_page">prev</string>
    <string name="his_time">time</string>
    <string name="lang_zh">chinese</string>
    <string name="lang_en">english</string>
    <string name="language">language</string>
    <string name="back">back</string>
    <string name="total">total</string>
    <string name="uw">u.w</string>
    <string name="count">count</string>
    <string name="start">start</string>
    <string name="title_config">configure</string>
    <string name="search_title">search device</string>
    <string name="weight_history">weight history</string>
    <string name="count_history">count history</string>
    <string name="input_sample">input number of sample</string>
    <string name="exit_app">Press again to exit the program</string>
    <string name="title_welcome">Welcome to use Bluetooth Scale</string>

</resources>
