<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="@drawable/history_item_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
  <TextView
      android:gravity="center"
      android:layout_weight="1"
      android:id="@+id/tv_his_time"
      android:layout_gravity="center"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/his_time"
      android:textColor="@color/white"
      android:textSize="@dimen/x45"
      />
  <TextView
      android:gravity="center"
      android:layout_weight="1"
      android:layout_gravity="center"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/tare"
      android:textColor="@color/white"
      android:textSize="@dimen/x45"
      />
  <TextView
      android:gravity="center"
      android:layout_weight="1"
      android:layout_gravity="center"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/switch_ng"
      android:textColor="@color/white"
      android:textSize="@dimen/x45"
      />
  <TextView
      android:gravity="center"
      android:layout_weight="1"
      android:layout_gravity="center"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/net"
      android:textColor="@color/white"
      android:textSize="@dimen/x45"
      />
</LinearLayout>