<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinder"
		android:orientation="vertical"
	 >
	<LinearLayout
		android:layout_weight="1"
		android:orientation="horizontal"
		android:background="@color/mirage"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		>
		<TextView
			android:layout_marginLeft="@dimen/x30"
			android:layout_gravity="center_vertical"
			android:text="@string/app_name"
			android:textColor="@color/white"
			android:textSize="@dimen/x35"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			>
			<TextView
				android:layout_weight="1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
			<TextView
				android:textSize="@dimen/x30"
				android:layout_gravity="center_vertical"
				android:textColor="@color/white"
				android:text="00001"
				android:maxEms="10"
				android:singleLine="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
			<ImageView
				android:layout_gravity="center_vertical"
				android:src="@drawable/ico_connected"
				android:layout_width="@dimen/x25"
				android:layout_height="@dimen/x25"
				/>
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:layout_weight="4"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginTop="@dimen/y25"
		android:orientation="horizontal"
		>

	<ListView

			android:id="@+id/lv_scan"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			/>
	</LinearLayout>
	<LinearLayout 
	    android:id="@+id/lay_oper_sacn"
	    android:layout_alignParentBottom="true"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >

	     <Button
					 android:background="@drawable/history_item_bg"
	        style="@style/bybutton"
	        android:id="@+id/btn_serach"
	        android:layout_marginLeft="10dp"
	        android:layout_weight="1"
	        android:text="@string/search" />
	     
	    <Button
					android:background="@drawable/history_item_bg"
	        style="@style/bybutton"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_weight="1"
	        android:text="@string/connprt" />
	    
	    <Button
					android:background="@drawable/history_item_bg"
	        style="@style/bybutton"
	        android:id="@+id/btn_cancel"
	    	android:layout_marginRight="10dp"
	    	android:layout_weight="1"
	        android:text="@string/back" />

	</LinearLayout>
	

	   
</LinearLayout>
