<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinder"
    android:orientation="vertical" >

  <LinearLayout
      android:layout_centerInParent="true"
      android:orientation="vertical"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      >
    <ImageView
        android:layout_gravity="center"
        android:background="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:textSize="@dimen/x35"
        android:layout_marginTop="@dimen/y10"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:text="@string/title_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <ImageView
        android:layout_marginTop="@dimen/y10"
        android:layout_gravity="center"
        android:src="@drawable/line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
  </LinearLayout>

  <LinearLayout
      android:layout_alignParentBottom="true"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <TextView
        android:layout_gravity="center"
        android:textSize="@dimen/x30"
        android:text="@string/start_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/bright_gray"
        />
    <TextView
        android:layout_gravity="center"
        android:textSize="@dimen/x30"
        android:text="@string/start_company"
        android:textColor="@color/bright_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
  </LinearLayout>


</RelativeLayout>
