<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/cinder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <!--顶部-->
  <LinearLayout
      android:layout_weight="1"
      android:orientation="horizontal"
      android:background="@color/mirage"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      >
    <TextView
        android:layout_marginLeft="@dimen/x30"
        android:layout_gravity="center_vertical"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/x35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
      <TextView
          android:layout_weight="1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          />
      <TextView
          android:textSize="@dimen/x30"
          android:layout_gravity="center_vertical"
          android:textColor="@color/white"
          android:text="00001"
          android:maxEms="10"
          android:singleLine="true"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          />
      <ImageView
          android:layout_gravity="center_vertical"
          android:src="@drawable/ico_connected"
          android:layout_width="@dimen/x25"
          android:layout_height="@dimen/x25"
          />
    </LinearLayout>
  </LinearLayout>

  <!--中部-->
  <LinearLayout
      android:layout_weight="4"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginTop="@dimen/y25"
      android:orientation="horizontal"
      >
    <!--侧滑按钮-->
    <LinearLayout
        android:layout_width="@dimen/x50"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

      <ImageButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:background="@drawable/ico_right_slide" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="3"
        android:background="@drawable/fill_bitmap_black"
        android:gravity="center"
        android:orientation="vertical"
        >
      <!--标题-->
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/y80"
          android:layout_gravity="center"
          android:orientation="horizontal"
          >
        <TextView
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/tv_his_time"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/his_time"
            android:textColor="@color/white"
            android:textSize="@dimen/x45"
            />
        <TextView
            android:gravity="center"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tare"
            android:textColor="@color/white"
            android:textSize="@dimen/x45"
            />
        <TextView
            android:gravity="center"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/switch_ng"
            android:textColor="@color/white"
            android:textSize="@dimen/x45"
            />
        <TextView
            android:gravity="center"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/net"
            android:textColor="@color/white"
            android:textSize="@dimen/x45"
            />

      </LinearLayout>
      <!--列表-->
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          >
        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
          <ListView
              android:id="@+id/listView"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              style="@style/style_common_listview"
              android:overScrollMode="never"
              tools:listitem="@android:layout/simple_list_item_2"
              />

        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
      </LinearLayout>

    </LinearLayout>
    <!--中间 右侧-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="@dimen/x50"
        android:layout_height="match_parent"
        android:gravity="center"
        >
    </LinearLayout>

  </LinearLayout>

  <!--底部-->
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingLeft="@dimen/x50"
        >
      <Button
          android:id="@+id/btn_previous_page"
          android:layout_width="@dimen/x150"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/x3"
          android:background="@drawable/btn_gray_selector"
          android:elevation="1dp"
          android:gravity="center"
          android:singleLine="true"
          android:text="@string/his_previous_page"
          android:textColor="@color/white"
          android:textSize="@dimen/x36"
          android:textStyle="bold"
          />
    </LinearLayout>
    <!--菜单按钮-->
    <LinearLayout
        android:layout_width="@dimen/x850"
        android:layout_height="match_parent"
        android:gravity="right|center_vertical"
        android:paddingRight="@dimen/x50"
        >

      <Button
          android:id="@+id/btn_filter"
          android:layout_width="@dimen/x150"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/x5"
          android:background="@drawable/btn_gray_selector"
          android:elevation="1dp"
          android:singleLine="true"
          android:text="@string/his_filter"
          android:textColor="@color/white"
          android:textSize="@dimen/x36"
          android:textStyle="bold"
          />
      <Button
          android:id="@+id/btn_next_page"
          android:layout_width="@dimen/x150"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/x3"
          android:background="@drawable/btn_gray_selector"
          android:elevation="1dp"
          android:gravity="center"
          android:singleLine="true"
          android:text="@string/his_next_page"
          android:textColor="@color/white"
          android:textSize="@dimen/x36"
          android:textStyle="bold"
          />

    </LinearLayout>
  </LinearLayout>
</LinearLayout>